--- a/index.html
+++ b/index.html
@@ -27,7 +27,18 @@
 				<div></div>
 				<div class="block-text">
 					<p class="block-text__namу">- By Emma Anderson</p>
-				</div>
+					<h1 class="block-text__title">BUKEE: THE BOOK 
+						<span>A room without books is like a body without a soul</span> </h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+						  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+						  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+						  nisi ut aliquip ex ea commodo consequat.</p>
+						<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
+							dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+						  sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis 
+						  unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
+						  <a href="" class="block-text__btn">Buy this book - $15.00	</a>
+						  <small>* Some conditions may applicable</small>
 			</div>
 		</div>
 	</div>
